# fca-store

./: README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: index.html  styles.css
src/fca_store/: __init__.py  http.py  interface.py  lattice.py  sqlite_store.py
tests/: test_fca_store.py
